repair embeddable build status icon

--- a/README.me
+++ b/README.me
@@ -1,3 +1,4 @@
 # start
-http://3.64.197.138/buildStatus/icon?job=calculate-pi
+[![Build Status](http://3.64.197.138/buildStatus/icon?job=calculate-pi)](http://3.64.197.138/job/calculate-pi/)
+
 
